# annualReportAnalyser

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  check_databases.py  check_models.py  compare_data_folders.py  deploy-azure.ps1  docker-compose.yml  flow.md  main.py  pyproject.toml  render.yaml  requirements.txt  run.ps1
.streamlit/: config.toml
src/: __init__.py  app.py  check_chroma.py  check_secondary.py  cleanup_secondary.py  config.py  debug_secondary.py  verify_secondary.py
src/agents/: __init__.py  chart_analyzer.py  comment_agent.py  document_analyzer.py
src/agents/tools/: __init__.py  calculation_tools.py  search_tools.py  stock_tools.py  table_tools.py  url_tools.py
src/extractors/: __init__.py  image_extractor.py  metadata_extractor.py  table_extractor.py  text_extractor.py
src/models/: __init__.py  comment_params.py  extracted_data.py  secondary_source.py
src/processing/: __init__.py  chunking.py  docling_processor.py  secondary_processor.py
src/storage/: __init__.py  chat_store.py  document_store.py  embedding_service.py  secondary_store.py  vector_store.py
src/ui/: __init__.py  attachment_component.py  chat_component.py  dynamic_parameter_ui.py  floating_chat.py  parameter_ui.py  preview_component.py  upload_component.py
